--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1 class="hero-header">
                     pameran <span style="color:#958552 ">smkn 2 trenggalek</span> dari siswa x rpl a
                  </h1>
-                 <p>Sunday FEB 13</p>
+                 <p>Rabu 21 November</p>
                  <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xlarge w3-margin-bottom w3-margin-right"></i>Jl. Ronggo Warsito Gg. Sidomukti No.1
                   Jambangan, Sumbergedong, Kec. Trenggalek, Kabupaten Trenggalek</p>
              </div>
